# QHO426

./: W4_avengers.py  W4_students.py  database.py  main.py  person.py  pyproject.toml  w3_cleaner
Data/: Simple
Data/lists/: index_list.py  simple_list.py
Data/tuples/: nested_tuples.py
basics/decisions/: and_operator.py
basics/input/: data_types.py  string_operators.py  user_input.py
basics/output/: ascii_art.py  escape_characters.py  multiline_message.py  simple_message.py
demos/: W3_cleaner.py  W4_avengers.py  W4_students.py  W7_graphs.py  W8_demo.py  for loop  w5_tinder.py  while loop
demos/x/gaga/: W3_funcs.py
visual/animations/: function.py  marker.py  shift_sin.py  simple.py  sine.py  squares.py
visual/plots/: simple.py
