[tool.poetry]
name = "repl_python3_QHO426"
version = "0.1.0"
description = ""
authors = ["mmhasan01 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
human-datetimedelta = "^0.3.1"
robot = "^20071211"
planet = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
